name:                pulmurice-heroku
version:             0.1.0.0
synopsis:            Heroku helpers for pulmurice server
homepage:            https://github.com/futurice/pulmurice-heroku
license:             MIT
license-file:        LICENSE
author:              Oleg Grenrus
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           Copyright © 2014 Futurice OY, Oleg Grenrus
stability:           experimental
category:            Game
build-type:          Simple
extra-source-files:  README.md, .gitignore
cabal-version:       >=1.10

library
  exposed-modules:     Pulmurice.Heroku.PostgreSQL
  build-depends:       base >=4.7 && <4.8,
                       split >=0.2 && <0.3,
                       network-uri >=2.6 && <2.7,
                       postgresql-simple >=0.4 && <0.5
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Tests.hs
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <4.8,
                       tasty ==0.10.*,
                       tasty-quickcheck == 0.8.*,
                       postgresql-simple >=0.4 && <0.5,
                       pulmurice-heroku
